Fix users table width on mobile

--- a/resources/css/system/_sidebar.css
+++ b/resources/css/system/_sidebar.css
@@ -26,7 +26,7 @@
   }
 
   .with-sidebar > :not(.sidebar) {
-    min-width: 100%;
+    width: 100%;
   }
 
   .sidebar {
